support new WCAG techniques and UI enhancements #3